report-finder-package-md-source/objects/Report_Finder_Category__c.object
<CustomObject>
    <description>Tags that can be applied to organize and filter Report Finder Items</description>
    <label>Report Finder Category</label>
    <nameField>
        <displayFormat>RFC-{0}</displayFormat>
        <label>Report Finder Category #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Finder Categories</pluralLabel>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Category_Description__c</fullName>
        <label>Category Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category_Name__c</fullName>
        <label>Category Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category_Name__c</columns>
        <columns>Category_Description__c</columns>
        <columns>Is_Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>